--- a/resources/assets/sass/blog/post.scss
+++ b/resources/assets/sass/blog/post.scss
@@ -84,15 +84,9 @@
 
       font-size: 1.3em;
       padding: 0 50px;
-      // white-space: pre-wrap;
-    	// white-space: -moz-pre-wrap !important;
-    	// white-space: -pre-wrap;
-    	// white-space: -o-pre-wrap;
-    	// word-wrap: break-word;
-      overflow-x: scroll;
-      overflow-y: scroll;
       code {
         font-size: inherit;
+        white-space: pre;
         overflow-x: scroll;
         overflow-y: scroll;
       }
